v1.0.6: Critical fixes - Forge 1.20.1 JVM args + Auto-updates system
✅ Fix Forge 1.20.1 JVM Arguments
- Resolved: --add-opens requires modules to be specified error
- New _processForgeJvmArgs() function for correct flat array processing
- Improved deduplication respecting flag+value pairs
- Added pre-spawn validation guard-rail

✅ Fully Functional Auto-Update System
- Complete refactoring with global autoUpdaterWebContents
- Real-time progress bar with speed and size
- Download Update button with visual feedback
- Robust error handling with retry option
- Exhaustive logging for debugging

🧹 Code Improvements
- Removed duplicate getNeoForgeVersions() function
- Added safeUpdateSelectedServer() wrapper
- Reduced verbose logging to debug level
- Updated translations for generic/macOS download buttons

📋 Updated Files
- index.js: Auto-updater refactored
- processbuilder.js: JVM args fix + guard-rail
- versionapi.js: Removed duplicates
- uicore.js: Auto-updater listener with fallback
- settings.js: Progress bar + pendingUpdateInfo handling
- electron-builder.yml: artifactName without spaces